workday/12.1/modules/ROOT/pages/workday-connector-studio.adoc
= Workday - Studio Configuration - Mule 4

Anypoint Studio (Studio) editors help you design and update your Mule applications, properties, and configuration files.

To add and configure a connector in Studio:

. <<create-mule-project,Create a Mule project>>.
. <<add-connector-to-project,Add the connector to your Mule project>>.
. <<configure-input-source,Configure an input source for the connector's flow>>.
. <<add-connector-operation,Add a connector operation to the flow>>.
. <<configure-global-element,Configure a global element for the connector>>.

When you run the connector, you can view the app log to check for problems, as described in <<view-app-log,View the App Log>>.

If you are new to configuring connectors in Studio, see xref:connectors::introduction/intro-config-use-studio.adoc[Using Anypoint Studio to Configure a Connector]. If, after reading this topic, you need additional information about the connector fields, see the xref:workday-reference.adoc[Workday Reference].

[[create-mule-project]]
== Create a Mule Project

In Studio, create a new Mule project in which to add and configure the connector:

. In Studio, select *File > New > Mule Project*.
. Enter a name for your Mule project and click *Finish*.

[[add-connector-to-project]]
== Add the Connector to Your Mule Project

Add Workday Connector to your Mule project to automatically populate the XML code with the connector's namespace and schema location and add the required dependencies to the project's `pom.xml` file:

. In the *Mule Palette* view, click *(X) Search in Exchange*.
. In *Add Modules to Project*, type `workday` in the search field.
. Click *Workday Connector* in *Available modules*.
. Click *Add*.
. Click *Finish*.

Adding a connector to a Mule project in Studio does not make that connector available to other projects in your Studio workspace.

[[configure-input-source]]
== Configure a Source

A source (listener) initiates a flow when a specified condition is met.
You can configure one of these input sources to use with Workday Connector:

* On Modified Objects +
Start your app when an object is created in Workday.
* HTTP Listener +
Starts your app using a browser or a command such as `curl`.
* Scheduler +
Starts your app at specified timed intervals.

To configure an *On Modified Objects* source:

. In the *Mule Palette* view, select *Workday > On Modified Objects*.
. Drag *On Modified Objects* source to the Studio canvas.
. On the *On Modified Objects* configuration screen, optionally change the value of the *Display Name* field.
. Enter the required information for the following fields:
+
[%header,cols="30s,70a"]
|===
|Studio Field |Description
|Connector configuration |Global Element Properties configuration name
|Object type |One of: `ABSENCE_INPUTS`, `ACADEMIC_CONTACTS`, `ALL_CURRENCIES`, `APPLICANTS`, `BASIC_CUSTOMERS`, `CANDIDATES`, `CERTIFICATION_ISSUERS`, `CERTIFICATIONS`, `COMPETENCIES`, `DEGREES`, `DONORS`, `EDUCATION_TEST_RESULTS`, `EDUCATIONAL_INSTITUTION_COURSE`, `HEALTH_CARE_RATES`, `INVESTORS`, `ORGANIZATIONS`, `PAYMENTS`, `PROGRAMS_OF_STUDY`, `STUDENTS`, `STUDENTS_APPLICATIONS`, `WORKERS`
|Scheduling Strategy a|Tells the source how it can poll the data. This field accepts two options:

* *Fixed Frequency* +
Polls for data at a specified number of milliseconds, seconds, minutes, hours, or days. The default is 1000 milliseconds.
* *Cron* +
Accepts an expression that polls for data based on a filter, such as every Monday in a month at a given time. See xref:mule-runtime::scheduler-concept.adoc#cron-expressions[Cron Expressions] for examples.
|===
+
. Click the plus sign (+) next to the *Connector configuration* field to <<configure-global-element,configure a global element>> that can be used by all instances of the On Modified Objects operation in the app.


[[add-connector-operation]]
== Add a Connector Operation to the Flow

When you add a connector operation to your flow, you immediately define a specific operation for that connector to perform. Workday Connector operations enable your app to process data received from the input source.

To add an operation for Workday Connector, follow these steps:

. In the *Mule Palette* view, select *Workday* and then select the desired operation.
. Drag the operation onto the Studio canvas to the right of the input source.

Each Workday operation has its own required fields in Anypoint Studio. For more information, see
the xref:workday-reference.adoc[Connector Reference].

[[configure-global-element]]
== Configure a Global Element

When you configure a connector, it’s best to configure a global element that all instances of that connector in the app can use. Configuring a global element requires you to provide the authentication credentials the connector uses to access the target Workday system.

To configure the global element for Workday Connector, follow these steps:

. Select the name of the connector in the Studio canvas.
. In the configuration screen for the operation, click the plus sign (+) next to the *Connector configuration* field to access the global element configuration fields.
. On the *General* tab, enter a configuration name in the *Name* field.
. Configure the authentication for the connection as described in the <<basic-authentication,Basic Authentication>> or <<x509-authentication,X.509 Authentication>> section.
+
You can reference a configuration file that contains ANT-style property placeholders (recommended), or you can enter your authorization credentials in the global configuration properties. For information about the benefits of using property placeholders and how to configure them, see xref:connectors::introduction/intro-connector-configuration-overview.adoc[Anypoint Connector Configuration].
+
. On the *Advanced* tab, optionally specify reconnection information, including a reconnection strategy.
. Click *Test Connection* to confirm that Mule can connect with the specified server. +
To validate connectivity using the *Test Connection* button, Workday Connector uses a `Performance_Management` service with the `Get_Degrees` operation. You must ensure that your service account has the required permissions to operate on that service.
+
[%header%autowidth.spread]
|===
|Security Policy|Domain/Functional Areas|Permitted Security Groups
|Set Up: Skills and Experience |Worker Profile and Skills a| * HR Administrator
* HR System
* Implementers
* Job and Position Administrator
* Learning Management System
| |Implementation| Implementers
|Special OX Web Services|Implementation|
|===
. Click *OK*.

[[basic-authentication]]
=== Basic Authentication

Enter the following information on the *General* tab of the *Global Element Properties* screen to configure Basic authentication:

[%header,cols="30s,70a"]
|===
|Field |Description
|Host Name |Enter the host name of one of Workday’s Cloud Servers. Default value: `impl-cc.workday.com`.
|Tenant Name |Enter the Workday Tenant ID, which usually has the suffix `pt1` appended to it, such as `acme_pt1`.
This parameter supports expressions, which allow the value of this parameter to change dynamically. For example, you can use an expression to create a multi-tenant connection.
|Username |Enter the username to log in with.
|Password |Enter the corresponding password.
|===

[[x509-authentication]]
=== x.509 Authentication

Enter the following information on the *General* tab of the *Global Element Properties* screen to configure X.509 authentication:

[%header,cols="30s,70a"]
|===
|Field |Description
|Host Name |Enter the host name of one of Workday’s Cloud Servers. Default value: `impl-cc.workday.com`.
|Tenant Name |Enter the Workday Tenant ID, which usually has the suffix `pt1` appended to it, such as `acme_pt1`.
This parameter supports expressions, which allow the value of this parameter to change dynamically. For example, you can use an expression to create a multi-tenant connection.
|Username |Enter the username to log in with.
|Key Store Path |The location of the keystore file.
|Type |The type of the keystore.
|Password |The password to access the keystore.
|Alias |The alias of the private key to use.
|Signature Algorithm |The signature algorithm to use.
|Digest Algorithm |The digest algorithm to use.
|Canonicalization algorithm |The c14n (canonicalization) algorithm to use.
|===

[[view-app-log]]
== View the App Log

To check for problems, you can view the app log as follows:

* If you’re running the app from Anypoint Platform, the output is visible in the Anypoint Studio console window.
* If you’re running the app using Mule from the command line, the app log is visible in your OS console.

Unless the log file path is customized in the app’s log file (`log4j2.xml`), you can view the app log in the default location `MULE_HOME/logs/<app-name>.log`.

== Next Step

After configuring Workday Connector in Studio, see the xref:workday-connector-examples.adoc[Examples] text for financial management use cases that demonstrate how to use this connector.

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
